--- a/app/src/main/res/layout/activity_tab_fragment_popular.xml
+++ b/app/src/main/res/layout/activity_tab_fragment_popular.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TabFragmentPopular">
+    android:orientation="vertical">
+    <ProgressBar
+        android:id="@+id/pv_restaurant_menu_popular"
+        android:layout_width="42dp"
+        android:layout_height="42dp"
+        android:layout_gravity="center"
+        android:visibility="invisible" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_list_of_popular_restaurant"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
