--- a/app/src/main/res/layout/activity_food_cart_page.xml
+++ b/app/src/main/res/layout/activity_food_cart_page.xml
@@ -4,17 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".FoodCartPage">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-    <LinearLayout
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_marginTop="20dp"
+            >
+<!--    <LinearLayout
         android:id="@+id/layout_total"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
+
         android:padding="5dp"
-        android:weightSum="2">
+     >
         <TextView android:gravity="end"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -32,13 +41,11 @@
             android:textSize="20dp">
 
         </TextView>
-    </LinearLayout>
+    </LinearLayout>-->
 
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_cart"
-
-        android:layout_below="@+id/layout_total"
         android:layout_height="wrap_content"
         android:layout_width="match_parent">
     </android.support.v7.widget.RecyclerView>
@@ -47,15 +54,131 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
+        android:layout_margin="5dp"
         android:background="@android:color/black" />
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        >
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:layout_margin="6dp">
 
+    <TextView
+        android:id="@+id/tv_total_food_price"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:text="Total Food Price" />
+    <TextView
+        android:id="@+id/tv_food_price"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:text="Price"/>
+
+
+</LinearLayout>
+
+
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_margin="6dp">
+
+                <TextView
+
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:text="Delivery Charge" />
+                <TextView
+                    android:id="@+id/tv_delivery_charge"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:text="Price"/>
+
+
+            </LinearLayout>
+
+
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_margin="6dp">
+
+                <TextView
+                    android:id="@+id/tv_vat_amount"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:text="VAT" />
+                <TextView
+                    android:id="@+id/tv_total_vat"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+
+                    android:text="Price"/>
+
+
+            </LinearLayout>
+
+
+
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_margin="6dp">
+
+                <TextView
+
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:text="Discount" />
+                <TextView
+                    android:id="@+id/tv_discount_amount"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:text="Price"/>
+
+
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@android:color/black" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_margin="6dp">
+
+                <TextView
+                    android:id="@+id/tv_order_item"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:text="Sub Total" />
+                <TextView
+                    android:id="@+id/tv_order_item_price"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+
+                    android:text="Price"/>
+
+
+            </LinearLayout>
+
+
+
+        </LinearLayout>
     <Button
-        android:layout_width="180dp"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="Pre-Order"
         android:layout_alignParentBottom="true"
@@ -78,5 +201,5 @@ android:layout_alignParentRight="true"
 
 
     </RelativeLayout>
-    </RelativeLayout>
+
 </LinearLayout>
