--- a/app/src/main/res/layout/activity_food_cart_single_item_page.xml
+++ b/app/src/main/res/layout/activity_food_cart_single_item_page.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
+    android:layout_margin="5dp"
     android:elevation="20dp">
     <TextView
         android:id="@+id/tv_order_item"
