--- a/app/src/main/res/layout/group_list_design.xml
+++ b/app/src/main/res/layout/group_list_design.xml
@@ -1,22 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <RelativeLayout
+     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="72dp"
-        android:layout_margin="4dp"
-
-        >
+        android:layout_margin="4dp">
 
         <ImageView
             android:id="@+id/list_icon"
             android:layout_width="80dp"
             android:layout_height="90dp"
             android:src="@drawable/pavelpic"
-            android:background="@drawable/friendlist_icon_bg"
-            />
+            android:background="@drawable/friendlist_icon_bg" />
 
         <LinearLayout
             android:orientation="vertical"
@@ -31,7 +29,7 @@
             android:layout_alignParentBottom="true">
 
             <TextView
-                android:id="@+id/label"
+                android:id="@+id/tv_friend_name"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
