--- a/app/src/main/res/layout/activity_food_cart_page.xml
+++ b/app/src/main/res/layout/activity_food_cart_page.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,9 +7,7 @@
     android:orientation="vertical"
     tools:context=".FoodCartPage">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -47,7 +45,8 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_cart"
         android:layout_height="wrap_content"
-        android:layout_width="match_parent">
+        android:layout_width="match_parent"
+        android:layout_margin="10dp">
     </android.support.v7.widget.RecyclerView>
 
 
@@ -67,13 +66,19 @@
         android:id="@+id/tv_total_food_price"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:text="Total Food Price" />
+        android:text="Sub Total" />
     <TextView
         android:id="@+id/tv_food_price"
-        android:layout_width="150dp"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="right"
+        android:layout_gravity="end"
         android:text="Price"/>
+
+    <TextView
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:text="Taka"/>
 
 
 </LinearLayout>
@@ -93,11 +98,15 @@
                     android:text="Delivery Charge" />
                 <TextView
                     android:id="@+id/tv_delivery_charge"
-                    android:layout_width="150dp"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="right"
+                    android:layout_gravity="end"
                     android:text="Price"/>
-
+                <TextView
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:text="Taka"/>
 
             </LinearLayout>
 
@@ -116,11 +125,15 @@
                     android:text="VAT" />
                 <TextView
                     android:id="@+id/tv_total_vat"
-                    android:layout_width="150dp"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
 
                     android:text="Price"/>
-
+                <TextView
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:text="Taka"/>
 
             </LinearLayout>
 
@@ -140,11 +153,15 @@
                     android:text="Discount" />
                 <TextView
                     android:id="@+id/tv_discount_amount"
-                    android:layout_width="150dp"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="right"
+                    android:layout_gravity="end"
                     android:text="Price"/>
-
+                <TextView
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:text="Taka"/>
 
             </LinearLayout>
 
@@ -163,20 +180,56 @@
                     android:id="@+id/tv_order_item"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
-                    android:text="Sub Total" />
+                    android:text="Total" />
                 <TextView
                     android:id="@+id/tv_order_item_price"
-                    android:layout_width="150dp"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
 
                     android:text="Price"/>
 
-
+                <TextView
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:text="Taka"/>
             </LinearLayout>
+
+
+<TextView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="Payement Type"
+    android:textSize="18sp"
+    android:textStyle="bold"
+    android:layout_marginTop="40dp"
+    android:layout_marginLeft="10dp"
+    />
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Cash On Delivery"
+                android:checked="true"
+                android:layout_marginLeft="30dp"
+                />
 
 
 
         </LinearLayout>
+
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Apply Promo"
+        android:gravity="center"
+        android:layout_marginTop="50dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="62dp"
+        android:background="#EB0707"
+        />
+
+
     <Button
         android:layout_width="200dp"
         android:layout_height="wrap_content"
@@ -201,5 +254,3 @@ android:layout_alignParentRight="true"
 
 
     </RelativeLayout>
-
-</LinearLayout>
