--- a/app/src/main/res/layout/myprofile_fragment.xml
+++ b/app/src/main/res/layout/myprofile_fragment.xml
@@ -26,7 +26,7 @@
                 android:layout_width="250px"
                 android:layout_height="250px"
               android:layout_margin="10dp"
-                android:src="@drawable/pavelpic"
+                android:src="@drawable/user"
                 />
 <LinearLayout
     android:layout_width="match_parent"
