--- a/app/src/main/res/layout/activity_food_cart_page.xml
+++ b/app/src/main/res/layout/activity_food_cart_page.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,13 +7,31 @@
     android:orientation="vertical"
     tools:context=".FoodCartPage">
 
+    <android.support.v7.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:title="Place Order "
+        android:gravity="center"
+        android:theme="@style/AppTheme2"
+        android:id="@+id/foodtoolbar"
+        android:background="#8B8B07"
+        >
+
+
+    </android.support.v7.widget.Toolbar>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="5dp"
             >
 <!--    <LinearLayout
         android:id="@+id/layout_total"
@@ -41,7 +59,87 @@
         </TextView>
     </LinearLayout>-->
 
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Restaurant"
+    android:textSize="16sp"
+    />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="72dp"
+                android:layout_margin="4dp">
 
+                <ImageView
+                    android:id="@+id/list_icon"
+                    android:layout_width="80dp"
+                    android:layout_height="90dp"
+                    android:src="@drawable/user"
+                    android:background="@drawable/friendlist_icon_bg" />
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:background="@drawable/friendlist_name_bg"
+                    android:layout_toRightOf="@+id/list_icon"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentBottom="true">
+
+                    <TextView
+                        android:id="@+id/tv_friend_name"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        android:paddingRight="16dp"
+                        android:text="Nurul Momen" />
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="5dp"
+                            android:textSize="15sp"
+                            android:textStyle="bold"
+                            android:paddingRight="6dp"
+                            android:text="Total Earn:" />
+
+                        <TextView
+
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="15sp"
+                            android:textStyle="bold"
+                            android:paddingRight="6dp"
+                            android:text="200" />
+
+                        <TextView
+
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="15sp"
+                            android:textStyle="bold"
+                            android:paddingRight="16dp"
+                            android:text="Points" />
+
+
+                    </LinearLayout>
+
+
+                </LinearLayout>
+
+
+            </RelativeLayout>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_cart"
         android:layout_height="wrap_content"
@@ -214,8 +312,24 @@
                 />
 
 
+<TextView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="10dp"
+    android:textStyle="bold"
+    android:text="Delivery To:"
+    android:textSize="17sp"
 
-        </LinearLayout>
+    />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_margin="10dp"
+                android:textSize="14sp"
+                android:text="c1, monallee tower, bastola"
+                android:background="@drawable/background_delivery_address"
+                />
+
 
 
     <Button
@@ -224,12 +338,13 @@
         android:text="Apply Promo"
         android:gravity="center"
         android:layout_marginTop="50dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="62dp"
         android:background="#EB0707"
         />
 
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
     <Button
         android:layout_width="200dp"
         android:layout_height="wrap_content"
@@ -251,6 +366,8 @@ android:layout_alignParentRight="true"
         android:textColor="#0A0909"
         tools:ignore="OnClick"/>
 
-
-
-    </RelativeLayout>
+</LinearLayout>
+        </LinearLayout>
+</RelativeLayout>
+    </ScrollView>
+    </LinearLayout>
