order cart done

--- a/app/src/main/res/layout/activity_tab_fragment_offer.xml
+++ b/app/src/main/res/layout/activity_tab_fragment_offer.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TabFragmentOffer">
+    tools:context=".TabFragmentOffer"
+    >
 
 </android.support.constraint.ConstraintLayout>
