--- a/app/src/main/res/layout/activity_tab_fragment_recommended.xml
+++ b/app/src/main/res/layout/activity_tab_fragment_recommended.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".TabFragmentRecommended">
+    tools:context=".TabFragmentRecommended"
+    android:id="@+id/tab_offer_container">
 
 
     <com.smarteist.autoimageslider.SliderLayout
@@ -205,6 +206,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
                 <TextView
+                    android:id="@+id/tv_view_all"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="View All"
