--- a/app/src/main/res/layout/activity_food_cart_page.xml
+++ b/app/src/main/res/layout/activity_food_cart_page.xml
@@ -59,12 +59,7 @@
         </TextView>
     </LinearLayout>-->
 
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Restaurant"
-    android:textSize="16sp"
-    />
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="72dp"
@@ -74,8 +69,8 @@
                     android:id="@+id/list_icon"
                     android:layout_width="80dp"
                     android:layout_height="90dp"
-                    android:src="@drawable/user"
-                    android:background="@drawable/friendlist_icon_bg" />
+                    android:src="@drawable/ic_home"
+                    android:background="@drawable/rounded_shape"/>
 
                 <LinearLayout
                     android:orientation="vertical"
@@ -90,16 +85,17 @@
                     android:layout_alignParentBottom="true">
 
                     <TextView
-                        android:id="@+id/tv_friend_name"
+                        android:id="@+id/tv_restaurant_name_food_cart"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
                         android:textSize="20sp"
                         android:textStyle="bold"
                         android:paddingRight="16dp"
-                        android:text="Nurul Momen" />
+                        android:text="Restaurant name"
+                       />
 
-                    <LinearLayout
+                   <!-- <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
@@ -133,7 +129,7 @@
                             android:text="Points" />
 
 
-                    </LinearLayout>
+                    </LinearLayout>-->
 
 
                 </LinearLayout>
@@ -183,30 +179,7 @@
 
 
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_margin="6dp">
 
-                <TextView
-
-                    android:layout_width="200dp"
-                    android:layout_height="wrap_content"
-                    android:text="Delivery Charge" />
-                <TextView
-                    android:id="@+id/tv_delivery_charge"
-                    android:layout_width="120dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="end"
-                    android:text="Price"/>
-                <TextView
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="end"
-                    android:text="Taka"/>
-
-            </LinearLayout>
 
 
 
@@ -235,6 +208,31 @@
 
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_margin="6dp">
+
+                <TextView
+
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:text="Delivery Charge" />
+                <TextView
+                    android:id="@+id/tv_delivery_charge"
+                    android:layout_width="120dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:text="Price"/>
+                <TextView
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:text="Taka"/>
+
+            </LinearLayout>
+
 
 
 
@@ -254,7 +252,7 @@
                     android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="end"
-                    android:text="Price"/>
+                    android:text="0.0"/>
                 <TextView
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
@@ -275,7 +273,7 @@
                 android:layout_margin="6dp">
 
                 <TextView
-                    android:id="@+id/tv_order_item"
+                    android:id="@+id/tv_order_item_total_price"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:text="Total" />
@@ -344,7 +342,8 @@
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:id="@+id/snackbar_show">
     <Button
         android:layout_width="200dp"
         android:layout_height="wrap_content"
