--- a/app/src/main/res/layout/food_list_group.xml
+++ b/app/src/main/res/layout/food_list_group.xml
@@ -13,7 +13,8 @@
         android:layout_height="wrap_content"
         android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
         android:textSize="17dp"
-        android:textColor="#030303" />
+        android:textColor="#030303"
+        />
 
 
 </LinearLayout>
