--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -11,18 +11,6 @@
  >
 
 
-    <android.support.design.widget.NavigationView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:id="@+id/NavigationId"
-        android:background="#ffffffff"
-        app:menu="@menu/drawermenu"
-        android:layout_gravity="start"
-        app:headerLayout="@layout/header"
-        >
-
-
-    </android.support.design.widget.NavigationView>
 
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -62,5 +50,19 @@
         </android.support.v4.view.ViewPager>
 
     </LinearLayout>
+
+
+    <android.support.design.widget.NavigationView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:id="@+id/NavigationId2"
+        android:background="#ffffffff"
+        app:menu="@menu/drawermenu"
+        android:layout_gravity="start"
+        app:headerLayout="@layout/header"
+        >
+
+
+    </android.support.design.widget.NavigationView>
 
 </android.support.v4.widget.DrawerLayout>
