recommendation page start

--- a/app/src/main/res/layout/activity_food_app.xml
+++ b/app/src/main/res/layout/activity_food_app.xml
@@ -30,6 +30,7 @@
         android:iconifiedByDefault="false"
         android:focusedByDefault="false"
         android:layout_marginLeft="15sp"
+        android:id="@+id/sv_for_restaurant"
         >
 
     </SearchView>
