--- a/app/src/main/res/layout/activity_tab_fragment_recommended.xml
+++ b/app/src/main/res/layout/activity_tab_fragment_recommended.xml
@@ -34,7 +34,8 @@
             android:layout_marginRight="16dp"
             android:layout_marginBottom="16dp"
             app:cardCornerRadius="8dp"
-            app:cardElevation="8dp">
+            app:cardElevation="8dp"
+            android:id="@+id/cv_chinise">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -73,7 +74,8 @@
             android:layout_marginRight="16dp"
             android:layout_marginBottom="16dp"
             app:cardCornerRadius="8dp"
-            app:cardElevation="8dp">
+            app:cardElevation="8dp"
+            android:id="@+id/cv_fastfood">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -112,7 +114,8 @@
             android:layout_marginRight="16dp"
             android:layout_marginBottom="16dp"
             app:cardCornerRadius="8dp"
-            app:cardElevation="8dp">
+            app:cardElevation="8dp"
+            android:id="@+id/cv_bangla">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -151,7 +154,8 @@
             android:layout_marginRight="16dp"
             android:layout_marginBottom="16dp"
             app:cardCornerRadius="8dp"
-            app:cardElevation="8dp">
+            app:cardElevation="8dp"
+            android:id="@+id/cv_bakery">
 
             <LinearLayout
                 android:layout_width="wrap_content"
