Profile Edit design

--- a/app/src/main/res/layout/activity_search_restaurant.xml
+++ b/app/src/main/res/layout/activity_search_restaurant.xml
@@ -22,6 +22,7 @@
         android:id="@+id/tv_search_result_for"
         android:layout_width="match_parent"
         android:layout_height="32dp"
+        android:layout_marginLeft="15dp"
         android:text="search result"
         android:textColor="@color/colorAccent"
         android:textSize="20sp"
