--- a/app/src/main/res/layout/activity_profile_name_edit.xml
+++ b/app/src/main/res/layout/activity_profile_name_edit.xml
@@ -22,7 +22,7 @@ android:layout_marginLeft="10dp"
         android:layout_height="wrap_content">
 
         <android.support.design.widget.TextInputEditText
-            android:id="@+id/userIDTextInputEditText"
+            android:id="@+id/userNameTextInputEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Name" />
@@ -33,7 +33,8 @@ android:layout_marginLeft="10dp"
     android:layout_height="wrap_content"
     android:gravity="center"
     android:layout_margin="5dp"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:id="@+id/sb_user_name_error">
     <Button
         android:layout_width="200dp"
      android:padding="5dp"
@@ -44,6 +45,7 @@ android:layout_marginLeft="10dp"
         android:textColor="@android:color/white"
         android:layout_height="wrap_content" />
     <Button
+        android:id="@+id/userNameUpdateButton"
         android:layout_width="200dp"
         android:padding="5dp"
         android:layout_margin="5dp"
@@ -52,5 +54,12 @@ android:layout_marginLeft="10dp"
         android:background="@color/colorPrimary"
         android:textColor="@android:color/white"
         android:layout_height="wrap_content" />
+
 </LinearLayout>
+    <ProgressBar
+        android:id="@+id/pv_edit_profile_name"
+        android:layout_width="42dp"
+        android:layout_height="42dp"
+        android:layout_gravity="center"
+        android:visibility="invisible" />
 </LinearLayout>
