--- a/app/src/main/res/layout/content_profile.xml
+++ b/app/src/main/res/layout/content_profile.xml
@@ -34,6 +34,7 @@
                 style="@style/profileDetailsTextMain" />
 
             <TextView
+                android:id="@+id/tv_profile_detail_name"
                 android:text="PPEEP Limited"
                 android:layout_toRightOf="@id/nameImageView"
                 style="@style/profileDetailsMiniText" />
@@ -53,6 +54,7 @@
 
         <RelativeLayout style="@style/profileDetailsLayout">
             <ImageView
+
                 android:id="@+id/mobileImageView"
                 android:src="@drawable/gendericon"
                 style="@style/profileDetailsImage" />
@@ -63,6 +65,7 @@
                 style="@style/profileDetailsTextMain"/>
 
             <TextView
+                android:id="@+id/tv_profile_detail_gender"
                 android:text="Male"
                 android:layout_toRightOf="@id/mobileImageView"
                 style="@style/profileDetailsMiniText" />
@@ -92,6 +95,7 @@
                 style="@style/profileDetailsTextMain" />
 
             <TextView
+                android:id="@+id/tv_profile_detail_email"
                 android:text="info@ppeepbd.com"
                 android:layout_toRightOf="@id/emailImageView"
                 style="@style/profileDetailsMiniText" />
@@ -150,6 +154,7 @@
                 style="@style/profileDetailsTextMain" />
 
             <TextView
+                android:id="@+id/tv_profile_detail_dob"
                 android:text="12-05-1990"
                 android:layout_toRightOf="@id/dobImageView"
                 style="@style/profileDetailsMiniText" />
