--- a/app/src/main/res/layout/activity_food_cart_page.xml
+++ b/app/src/main/res/layout/activity_food_cart_page.xml
@@ -330,18 +330,12 @@
 
 
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Apply Promo"
-        android:gravity="center"
-        android:layout_marginTop="50dp"
-        android:background="#EB0707"
-        />
+
 
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="30dp"
     android:orientation="horizontal"
     android:id="@+id/snackbar_show">
     <Button
@@ -357,15 +351,25 @@
         android:layout_gravity="center"
         android:layout_height="wrap_content"
         android:layout_width="180dp"
-        android:layout_margin="10dp"
+        android:layout_marginBottom="5dp"
         android:onClick="insertOrder"
-        android:text="Place Order"
-android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
+        android:text="Apply Promo"
+
         android:textColor="#0A0909"
         tools:ignore="OnClick"/>
 
 </LinearLayout>
+
+            <Button
+                android:id="@+id/placeOrderId"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Place Order"
+                android:gravity="center"
+               android:layout_marginBottom="2dp"
+                android:layout_marginTop="5dp"
+                android:background="#EB0707"
+                />
         </LinearLayout>
 </RelativeLayout>
     </ScrollView>
