--- a/app/src/main/res/layout/activity_food_cart_page.xml
+++ b/app/src/main/res/layout/activity_food_cart_page.xml
@@ -336,10 +336,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="30dp"
+    android:gravity="center"
     android:orientation="horizontal"
     android:id="@+id/snackbar_show">
+
     <Button
-        android:layout_width="200dp"
+        android:id="@+id/preorderfoodID"
+        android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:text="Pre-Order"
         android:layout_alignParentBottom="true"
@@ -347,16 +350,14 @@
 
         />
     <Button
-        android:id="@+id/btn_placeorder"
+        android:id="@+id/btn_applyPromo"
         android:layout_gravity="center"
         android:layout_height="wrap_content"
         android:layout_width="180dp"
-        android:layout_marginBottom="5dp"
-        android:onClick="insertOrder"
         android:text="Apply Promo"
-
+        android:layout_margin="10dp"
         android:textColor="#0A0909"
-        tools:ignore="OnClick"/>
+/>
 
 </LinearLayout>
 
