--- a/app/src/main/res/layout/activity_pre_order_time_select.xml
+++ b/app/src/main/res/layout/activity_pre_order_time_select.xml
@@ -25,6 +25,8 @@
             android:id="@+id/currentdatepick"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:clickable="false"
+            android:focusable="false"
             android:hint="Delivery Date" />
     </android.support.design.widget.TextInputLayout>
     <android.support.design.widget.TextInputLayout
@@ -54,6 +56,7 @@
         android:layout_height="wrap_content"
         android:text="Place Order"
         android:gravity="center"
+
         android:layout_marginBottom="2dp"
         android:layout_marginTop="5dp"
         android:background="#EB0707"
