--- a/app/src/main/res/layout/activity_tab_fragment_offer.xml
+++ b/app/src/main/res/layout/activity_tab_fragment_offer.xml
@@ -1,10 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".TabFragmentOffer"
+    android:orientation="vertical"
     >
+    <ProgressBar
+        android:id="@+id/pv_restaurant_offer_menu"
+        android:layout_width="42dp"
+        android:layout_height="42dp"
+        android:layout_gravity="center"
+        android:visibility="invisible" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_restaurants_offer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
