--- a/app/src/main/res/layout/activity_profile_email_edit.xml
+++ b/app/src/main/res/layout/activity_profile_email_edit.xml
@@ -12,7 +12,7 @@
 
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/userIDTextInputLayout"
+        android:id="@+id/userEmailTextInputLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_marginLeft="10dp"
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content">
 
         <android.support.design.widget.TextInputEditText
-            android:id="@+id/userIDTextInputEditText"
+            android:id="@+id/userEmailTextInputEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Email Address" />
@@ -33,8 +33,10 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:layout_margin="5dp"
+        android:id="@+id/sb_user_name_error"
         android:orientation="horizontal">
         <Button
+            android:id="@+id/cancelButton"
             android:layout_width="200dp"
             android:padding="5dp"
             android:layout_margin="5dp"
@@ -44,6 +46,7 @@
             android:textColor="@android:color/white"
             android:layout_height="wrap_content" />
         <Button
+            android:id="@+id/emailUpdateButton"
             android:layout_width="200dp"
             android:padding="5dp"
             android:layout_margin="5dp"
@@ -53,4 +56,10 @@
             android:textColor="@android:color/white"
             android:layout_height="wrap_content" />
     </LinearLayout>
+    <ProgressBar
+        android:id="@+id/pv_edit_profile_name"
+        android:layout_width="42dp"
+        android:layout_height="42dp"
+        android:layout_gravity="center"
+        android:visibility="invisible" />
 </LinearLayout>
