--- a/app/src/main/res/layout/activity_profile_name_edit.xml
+++ b/app/src/main/res/layout/activity_profile_name_edit.xml
@@ -36,6 +36,7 @@ android:layout_marginLeft="10dp"
     android:orientation="horizontal"
     android:id="@+id/sb_user_name_error">
     <Button
+        android:id="@+id/cancelButton"
         android:layout_width="200dp"
      android:padding="5dp"
         android:layout_margin="5dp"
