--- a/app/src/main/res/layout/content_profile.xml
+++ b/app/src/main/res/layout/content_profile.xml
@@ -123,6 +123,7 @@
                 style="@style/profileDetailsTextMain" />
 
             <TextView
+                android:id="@+id/addresTextView"
                 style="@style/profileDetailsMiniText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
