--- a/app/src/main/res/menu/foodappcart.xml
+++ b/app/src/main/res/menu/foodappcart.xml
@@ -9,6 +9,7 @@
         android:id="@+id/action_drawer_cart"
         android:orderInCategory="200"
         android:title="Cart"
-        android:icon="@drawable/ic_shopping_cart_black_24dp"
-        app:showAsAction="ifRoom"/>
+        android:icon="@drawable/ic_menu_notifications"
+        app:showAsAction="always"/>
+        />
 </menu>
